fix: Step 6-R 코드 리뷰 HIGH/CRITICAL 이슈 수정
Tier 1 (Security):
- ByteArray 오버로드에 50 MB 크기 제한 추가 (java21/java25)
- ffmVipsImageOf(Path)에 파일 크기 제한 누락 수정 (java25)
- FfmVipsNativeRuntime: vips-ffm 기본 untrusted 차단 설명 KDoc 추가

Tier 2 (Ops/SRE):
- JVipsRuntime.shutdown(): getAndSet → compareAndSet(INITIALIZED, SHUTDOWN)
  미초기화 상태에서 shutdown() 호출 시 싱글턴 영구 브릭 방지
- FfmVipsRuntime.shutdown(): 동일한 CAS 수정
- FfmVipsImageSupport.checkPixelCount(): arena.close() 이중 호출 제거
  호출자(decodeAndCheckPixels/ffmVipsImageOf)가 arena 정리 단독 책임
- FfmVipsRuntime: concurrency 파라미터 FfmVipsNativeRuntime.nativeInit()으로 전달
  FfmVipsNativeRuntime.nativeInit(concurrency: Int) 시그니처 추가

Tier 4 (Code Quality):
- FfmVipsRuntime.checkNativeAccessEnabled(): OR 조건 오탐 수정
  --add-opens=...=ALL-UNNAMED 같은 인수가 ALL-UNNAMED 포함만으로 매칭되던 버그
  두 조건 모두 동일 arg 내에서 확인하도록 변경

Tier 5 (Silent Failure):
- CancellationException 재던짐 누락 수정 (JVipsImage, FfmVipsImage writeTo)
  코루틴 취소 신호가 VipsEncodeException으로 래핑되어 소실되던 버그

Tier 6 (Performance/Stability):
- JVipsImage.resize/thumbnail/crop: 네이티브 clone 누수 수정 (CRITICAL)
  IllegalArgumentException 발생 시 NativeHandle 미등록 cloned가 누수됨
  try/finally 패턴으로 모든 예외에서 cloned.release() 보장
- 픽셀 수 곱셈 오버플로우 수정: .toLong() 모든 피연산자에 적용 (java21/java25)

공통:
- catch (e: Exception) → catch (e: Error) + catch (e: Exception) 분리
  UnsatisfiedLinkError 발생 시 INITIALIZING 상태 영구 고착 방지 (JVips/FFM)
- resetForTest(): 150_000_000L → VipsLimits.DEFAULT_MAX_PIXELS
- VipsRuntime.init() 기본값: 150_000_000L → VipsLimits.DEFAULT_MAX_PIXELS
- writeTo(Path) 오류 메시지에 경로 포함 추가